--- a/service.html
+++ b/service.html
@@ -160,8 +160,8 @@
         </div>
     </section>
     <!-- finish service header -->
-     <!-- start great place -->
-     <section class="great_section">
+    <!-- start great place -->
+    <section class="great_section">
         <div class="container">
             <div class="head">
                 <div class="main_content_start">
@@ -171,14 +171,70 @@
                         typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since.</p>
                 </div>
                 <div class="button">
-                    <a href="#" class="btn first"> Booking Now</a>
+                    <a href="doctors.html" class="btn first"> Booking Now</a>
                 </div>
             </div>
 
         </div>
     </section>
     <!-- finish great place -->
+    <!-- start doctor details -->
 
+    <div class="other_doctor_service ">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <div>
+                    <h5 class="title">All Service </h5>
+                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                </div>
+                <div class="search_form">
+                    <input type="text" class="form-control" placeholder="search by service & branch name">
+                    <span class="icon_search"><i class="fa-solid fa-magnifying-glass"></i></span>
+                </div>
+
+            </div>
+            <!-- For loop this Card Doctor -->
+            <div class="card_doctor">
+                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <div class="other_doctor_details">
+                    <h5 class="name">Ahmed Hawam</h5>
+                    <span class="speciality">Dental Prosthodontist Speciality</span>
+                    <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
+                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                </div>
+            </div>
+            <!-- For loop this Card Doctor -->
+            <!-- For loop this Card Doctor -->
+            <div class="card_doctor">
+                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <div class="other_doctor_details">
+                    <h5 class="name">Ahmed Hawam</h5>
+                    <span class="speciality">Dental Prosthodontist Speciality</span>
+                    <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
+                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                </div>
+            </div>
+            <!-- For loop this Card Doctor -->
+
+            <!-- For loop this Card Doctor -->
+            <div class="card_doctor">
+                <img src="./media/image/7w7w.jpg" alt="doctor" />
+                <div class="other_doctor_details">
+                    <h5 class="name">Ahmed Hawam</h5>
+                    <span class="speciality">Dental Prosthodontist Speciality</span>
+                    <!-- <p class="location">El Damam Branch , El Mawada District</p> -->
+                    <a href="booking_doctor.html" class="btn book_doctor_btn">Book Doctor</a>
+                </div>
+            </div>
+            <!-- For loop this Card Doctor -->
+
+
+
+
+        </div>
+    </div>
+
+    <!-- finish  doctor detials -->
 
 
 
