--- a/contact-us.html
+++ b/contact-us.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="take_look">
                         <h4>Take a look at the other Almeswak branches</h4>
-                        <a href="branch.html">
+                        <a href="branches.html">
                             <i class="fa-solid fa-arrow-right"></i>
                         </a>
                     </div>
