--- a/about.html
+++ b/about.html
@@ -33,6 +33,18 @@
         <i class="fa-brands fa-whatsapp"></i>
     </a>
     <!-- Start flotting whatsapp -->
+
+    <!-- START BREADCRUMB -->
+    <section class="breadcrumb">
+        <div class="container">
+          <div class="content">
+            <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
+            <span>About Us</span>
+          </div>
+        </div>
+      </section>
+      <!-- FINISH BREADCRUMB -->
+    
     <!-- start about us header -->
     <section class="header_about_us">
         <div class="container">
@@ -569,6 +581,7 @@
         </div>
     </section>
     <!-- finish team section -->
+    
     <!-- start great place -->
     <section class="great_section">
         <div class="container">
@@ -587,8 +600,6 @@
         </div>
     </section>
     <!-- finish great place -->
-
-
 
     <script src="js/main.js"></script>
     <script src="js/counterup.min.js"></script>
