--- a/doctor_details.html
+++ b/doctor_details.html
@@ -372,7 +372,7 @@
                     </div>
                     <!-- Initialize Swiper -->
                     <script>
-                      var swiper = new Swiper(".clinicSwiper" , {
+                      var swiper = new Swiper(".clinicSwiper", {
                         slidesPerView: 3,
                         spaceBetween: 30,
                         loop: true,
@@ -380,11 +380,11 @@
                           300: {
                             slidesPerView: 1,
                           },
-                          
+
                           768: {
                             slidesPerView: 2,
                           },
-                          
+
                           1024: {
                             slidesPerView: 3,
                             spaceBetween: 30,
@@ -410,7 +410,47 @@
                   aria-labelledby="services-tab"
                   tabindex="0"
                 >
-                  ...
+                  <!-- Start card doctor services -->
+                  <div class="card_doctor_services">
+                    <img src="./media/image/7w7w.jpg" alt="doctor" />
+                    <div class="details_doctor_services">
+                      <p class="title">Cosmetic Dentistry</p>
+                      <p class="text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod
+                      </p>
+                      <a href="#" class="btn book_now">Book Now</a>
+                    </div>
+                  </div>
+                  <!-- End card doctor services -->
+
+                  <!-- Start card doctor services -->
+                  <div class="card_doctor_services">
+                    <img src="./media/image/7w7w.jpg" alt="doctor" />
+                    <div class="details_doctor_services">
+                      <p class="title">Cosmetic Dentistry</p>
+                      <p class="text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod
+                      </p>
+                      <a href="#" class="btn book_now">Book Now</a>
+                    </div>
+                  </div>
+                  <!-- End card doctor services -->
+
+                  <!-- Start card doctor services -->
+                  <div class="card_doctor_services">
+                    <img src="./media/image/7w7w.jpg" alt="doctor" />
+                    <div class="details_doctor_services">
+                      <p class="title">Cosmetic Dentistry</p>
+                      <p class="text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod
+                      </p>
+                      <a href="#" class="btn book_now">Book Now</a>
+                    </div>
+                  </div>
+                  <!-- End card doctor services -->
                 </div>
                 <div
                   class="tab-pane fade reviews"
@@ -419,7 +459,96 @@
                   aria-labelledby="reviews-tab"
                   tabindex="0"
                 >
-                  ...
+                  <!-- overall rating -->
+                  <div class="overall_rating">
+                    <div class="rating">
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star active"></i>
+                      <i class="fa-solid fa-star"></i>
+                      <i class="fa-solid fa-star"></i>
+                    </div>
+                    <h5>Overall Rating</h5>
+                    <p>From 120 Patients</p>
+                  </div>
+                  <!-- overall rating -->
+
+                  <!-- all reviews -->
+                  <div class="all_reviews">
+                    <h5 class="title">All Reviews</h5>
+                    <!-- For loop this Card all reviews -->
+                    <div class="card_all_reviews">
+                      <div class="person_rate">
+                        <img src="./media/image/7w7w.jpg" alt="rate" />
+                        <div class="rate">
+                          <p class="name">Ahmed Hawam</p>
+                          <div class="rating">
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                          </div>
+                          <span class="date">22 march 2022</span>
+                        </div>
+                      </div>
+                      <p class="rate_text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod orem ipsum dolor sit amet,
+                        consetetur elitr, sed diam nonumy eirmod
+                      </p>
+                    </div>
+                    <!-- For loop this Card all reviews -->
+
+                    <!-- For loop this Card all reviews -->
+                    <div class="card_all_reviews">
+                      <div class="person_rate">
+                        <img src="./media/image/7w7w.jpg" alt="rate" />
+                        <div class="rate">
+                          <p class="name">Ahmed Hawam</p>
+                          <div class="rating">
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                          </div>
+                          <span class="date">22 march 2022</span>
+                        </div>
+                      </div>
+                      <p class="rate_text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod orem ipsum dolor sit amet,
+                        consetetur elitr, sed diam nonumy eirmod
+                      </p>
+                    </div>
+                    <!-- For loop this Card all reviews -->
+
+                    <!-- For loop this Card all reviews -->
+                    <div class="card_all_reviews">
+                      <div class="person_rate">
+                        <img src="./media/image/7w7w.jpg" alt="rate" />
+                        <div class="rate">
+                          <p class="name">Ahmed Hawam</p>
+                          <div class="rating">
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star active"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                          </div>
+                          <span class="date">22 march 2022</span>
+                        </div>
+                      </div>
+                      <p class="rate_text">
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                        sed diam nonumy eirmod orem ipsum dolor sit amet,
+                        consetetur elitr, sed diam nonumy eirmod
+                      </p>
+                    </div>
+                    <!-- For loop this Card all reviews -->
+                  </div>
+                  <!-- all reviews -->
                 </div>
               </div>
             </div>
