--- a/details_branch.html
+++ b/details_branch.html
@@ -95,7 +95,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -131,7 +131,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact-us.html">Contact us</a>
             </li>
           </ul>
           <div class="auth">
@@ -431,7 +431,7 @@
                 diam nonumy eirmod orem ipsum dolor sit amet, consetetur elitr,
                 sed diam nonumy eirmod</span
               >
-              <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+              <a href="service.html" class="btn book_doctor_btn">Book Doctor</a>
             </div>
           </div>
           <!-- For loop this Card Doctor -->
@@ -446,7 +446,7 @@
                 diam nonumy eirmod orem ipsum dolor sit amet, consetetur elitr,
                 sed diam nonumy eirmod</span
               >
-              <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+              <a href="service.html" class="btn book_doctor_btn">Book Doctor</a>
             </div>
           </div>
           <!-- For loop this Card Doctor -->
@@ -461,7 +461,7 @@
                 diam nonumy eirmod orem ipsum dolor sit amet, consetetur elitr,
                 sed diam nonumy eirmod</span
               >
-              <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+              <a href="service.html" class="btn book_doctor_btn">Book Doctor</a>
             </div>
           </div>
           <!-- For loop this Card Doctor -->
@@ -483,7 +483,7 @@
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn first"> Booking Now</a>
+              <a href="doctors.html" class="btn first"> Booking Now</a>
             </div>
           </div>
         </div>
@@ -497,7 +497,7 @@
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
           <span class="sub_title">al meswak doctors</span>
-          <a href="#" class="btn show_all">View All Doctors</a>
+          <a href="doctors.html" class="btn show_all">View All Doctors</a>
         </div>
         <h2 class="title">Meet Our Best Dental Doctors</h2>
         <p class="text">
@@ -520,7 +520,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -541,7 +541,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -562,7 +562,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -583,13 +583,44 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
       </div>
     </section>
     <!-- End Doctors -->
+
+    <!-- Start contact -->
+    <section class="contact_details">
+          <div class="contact_details_card">
+            <div class="information_contact">
+              <h2 class="head">
+                  Almaeswak Mekkah Branch ( The main branch )
+              </h2>
+              <p>Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic Dentistry,
+                  University of Leeds, England</p>
+              <div class="lists">
+                  <span><i class="fas fa-map-marker-alt"></i></span>
+                  <p> Consultant of Oral Medicine and Cosmetic Dentistry and a Diploma in Cosmetic
+                      Dentistry,
+                      University of Leeds, England</p>
+              </div>
+              <div class="lists">
+                  <span><i class="fa-solid fa-phone"></i></span>
+                  <a class="parg" href="tel:01093140277"> 0109654245125414 </a>
+
+              </div>
+              <div class="lists">
+                  <span><i class="fa-solid fa-envelope"></i></span>
+                  <a class="parg" href="mailto:someone@yoursite.com"> mt7899@gmail</a>
+              </div>
+
+          </div>
+          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3418.960405149614!2d31.371055515097687!3d31.027352778424618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f79d1062afff57%3A0x40e6c610456cf723!2sCrazy%20Idea!5e0!3m2!1sen!2seg!4v1663680999834!5m2!1sen!2seg" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+    <!-- End contact -->
 
     <!-- start footer section -->
     <footer>
