--- a/doctor_details.html
+++ b/doctor_details.html
@@ -95,7 +95,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -131,7 +131,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact-us.html">Contact us</a>
             </li>
           </ul>
           <div class="auth">
@@ -419,7 +419,7 @@
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                         sed diam nonumy eirmod
                       </p>
-                      <a href="#" class="btn book_now">Book Now</a>
+                      <a href="service.html" class="btn book_now">Book Now</a>
                     </div>
                   </div>
                   <!-- End card doctor services -->
@@ -433,7 +433,7 @@
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                         sed diam nonumy eirmod
                       </p>
-                      <a href="#" class="btn book_now">Book Now</a>
+                      <a href="service.html" class="btn book_now">Book Now</a>
                     </div>
                   </div>
                   <!-- End card doctor services -->
@@ -447,7 +447,7 @@
                         Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
                         sed diam nonumy eirmod
                       </p>
-                      <a href="#" class="btn book_now">Book Now</a>
+                      <a href="service.html" class="btn book_now">Book Now</a>
                     </div>
                   </div>
                   <!-- End card doctor services -->
@@ -907,7 +907,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+            <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
           </div>
         </div>
         <!-- For loop this Card Doctor -->
@@ -926,7 +926,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+            <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
           </div>
         </div>
         <!-- For loop this Card Doctor -->
@@ -945,7 +945,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+            <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
           </div>
         </div>
         <!-- For loop this Card Doctor -->
@@ -964,7 +964,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn book_doctor_btn">Book Doctor</a>
+            <a href="doctor_details.html" class="btn book_doctor_btn">Book Doctor</a>
           </div>
         </div>
         <!-- For loop this Card Doctor -->
