--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -131,7 +131,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact-us.html">Contact us</a>
             </li>
           </ul>
           <div class="auth">
@@ -273,7 +273,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
               </p>
-              <a href="#" class="btn">Book now</a>
+              <a href="service.html" class="btn">Book now</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -293,7 +293,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna
               </p>
-              <a href="#" class="btn">Book now</a>
+              <a href="service.html" class="btn">Book now</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -311,7 +311,7 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                 diam nonumy eirmod tempor invidunt ut labore et dolore magna,
               </p>
-              <a href="#" class="btn">Book now</a>
+              <a href="service.html" class="btn">Book now</a>
             </div>
           </div>
           <!-- For loop this card -->
@@ -400,7 +400,7 @@
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
           <span class="sub_title">al meswak doctors</span>
-          <a href="#" class="btn show_all">View all doctors</a>
+          <a href="doctors.html" class="btn show_all">View all doctors</a>
         </div>
         <h2 class="title">Meet Our Best Dental Doctors</h2>
         <p class="text">
@@ -423,7 +423,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -444,7 +444,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -465,7 +465,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
@@ -486,7 +486,7 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-            <a href="#" class="btn booking">Book now</a>
+            <a href="doctor_details.html" class="btn booking">Book now</a>
           </div>
         </div>
         <!-- End card doctor -->
