--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
               <a class="nav-link  " aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -127,7 +127,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact-us.html">Contact us</a>
             </li>
           </ul>
           <div class="auth">
@@ -169,44 +169,28 @@
     <!-- start form sign  -->
     <form action="#" class="form_sign">
       <h5>Sign Up</h5>
-      <!-- start radio button -->
 
+      <!-- start button social login -->
       <div class="collection">
         <!-- content -->
         <div class="content">
-          <input type="radio" name="rd" id="one" />
-          <input type="radio" name="rd" id="two" />
-          <input type="radio" name="rd" id="three" />
-          <label for="one" class="box first">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/apple.png" alt="adv" />
-                <p>Continue With Apple</p>
-              </div>
-            </div>
-          </label>
-
-          <label for="two" class="box two">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/google.png" alt="adv" />
-                <p>Continue With Google</p>
-              </div>
-            </div>
-          </label>
-
-          <label for="three" class="box three">
-            <div class="plan">
-              <div class="text">
-                <img src="media/image/twitter.png" alt="adv" />
-                <p>Continue With Twitter</p>
-              </div>
-            </div>
-          </label>
+          <a href="#" class="btn">
+            <img src="./media/image/google.png" alt="google">
+            Continue With Google
+          </a>
+          <a href="#" class="btn">
+            <img src="./media/image/apple.png" alt="apple">
+            Continue With Apple
+          </a>
+          <a href="#" class="btn">
+            <img src="./media/image/twitter.png" alt="twitter">
+            Continue With Google
+          </a>
         </div>
         <!-- content -->
       </div>
-      <!-- finish radio button -->
+      <!-- finish button social login -->
+      
       <div class="or">or</div>
       <!-- start input group -->
       <div class="form-group">
