--- a/booking_doctor.html
+++ b/booking_doctor.html
@@ -95,7 +95,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about.html">About Us</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -131,7 +131,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact-us.html">Contact us</a>
             </li>
           </ul>
           <div class="auth">
@@ -241,7 +241,7 @@
                                 <h6>Booking Time</h6>
                                 <div class="time"><i class="fa-solid fa-calendar-days"></i>Sat 22/3 - 4:30 Pm</div>
                             </div>
-                            <a href="doctors.html" class="booking_btn btn">Change Date <i class="fa-solid fa-arrow-right-long"></i></a>
+                            <a href="doctor_details.html" class="booking_btn btn">Change Date <i class="fa-solid fa-arrow-right-long"></i></a>
                         </div>
                     </div>
                 </div>
