--- a/contact-us.html
+++ b/contact-us.html
@@ -69,10 +69,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link   " aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link" href="contact-us.html">Contact us</a>
                     </li>
                 </ul>
                 <div class="auth">
@@ -122,12 +122,11 @@
     </nav>
     <!-- End Navbar -->
 
-
     <!-- START BREADCRUMB -->
     <section class="breadcrumb">
         <div class="container">
             <div class="content">
-                <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
+                <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <span>Contact us</span>
             </div>
         </div>
@@ -172,8 +171,7 @@
                         </div>
                         <div class="lists">
                             <span><i class="fa-solid fa-envelope"></i></span>
-                            <p><a class="parg" href="mailto:someone@yoursite.com"> mt7899@gmail
-                                </a> </p>
+                            <a class="parg" href="mailto:someone@yoursite.com"> mt7899@gmail</a>
                         </div>
 
                     </div>
@@ -243,7 +241,6 @@
     </section>
 
     <!-- finish contact  -->
-
 
     <!-- start footer section -->
     <footer>
@@ -378,7 +375,6 @@
         </div>
     </footer>
     <!-- end footer section -->
-
 
     <script>
         // Example starter JavaScript for disabling form submissions if there are invalid fields
