--- a/reset_password.html
+++ b/reset_password.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
     <link rel="stylesheet" href="sass/style.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/sweet-alert.css" />
     <!-- ? Main CSS -->
 
@@ -16,6 +18,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/fontawesome.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/bootstrap-select.min.js"></script>
     <script src="js/sweet-alert.min.js"></script>
     <!-- ? Main JavaScript -->
 
@@ -160,75 +164,45 @@
       <div class="container">
         <div class="content">
           <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
-          <span>Login</span>
+          <span>Reset Password</span>
         </div>
       </div>
     </section>
     <!-- FINISH BREADCRUMB -->
 
-    <!-- start form login  -->
-    <form action="#" class="form_login">
-      <h5>Login</h5>
-      <!-- start button social login -->
-      <div class="collection">
-        <!-- content -->
-        <div class="content">
-          <a href="#" class="btn">
-            <img src="./media/image/google.png" alt="google">
-            Continue With Google
-          </a>
-          <a href="#" class="btn">
-            <img src="./media/image/apple.png" alt="apple">
-            Continue With Apple
-          </a>
-          <a href="#" class="btn">
-            <img src="./media/image/twitter.png" alt="twitter">
-            Continue With Google
-          </a>
-        </div>
-        <!-- content -->
+    <!-- start Reset Password -->
+    <section class="auth">
+      <div class="container">
+        <form action="index.html" class="auth_card">
+          <h5 class="title">Reset Password</h5>
+          <p class="text">
+            The new Password must be strong and have at least 8 samples consisting of characters and numbers.
+          </p>
+          <div class="form-group">
+            <i class="fa-solid fa-lock"></i>
+            <input
+              type="number"
+              name=""
+              id=""
+              class="form-control"
+              placeholder="enter new password"
+            />
+          </div>
+          <div class="form-group">
+            <i class="fa-solid fa-lock"></i>
+            <input
+              type="number"
+              name=""
+              id=""
+              class="form-control"
+              placeholder="enter new password"
+            />
+          </div>
+          <button type="submit" class="btn">Save</button>
+        </form>
       </div>
-      <!-- finish button social login -->
-
-      <div class="or">or</div>
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="tel"
-          class="form-control"
-          name="phone"
-          id="phone"
-          placeholder="your phone number"
-          required
-        />
-        <span class="icon_form"><i class="fa-solid fa-phone"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <!-- start input group -->
-      <div class="form-group">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          id="password"
-          placeholder="enter new password"
-        />
-        <span class="icon_form"><i class="fa-solid fa-lock"></i></span>
-      </div>
-      <!-- finish input group -->
-
-      <button type="submit" class="btn btn_submit" name="submit" id="submit">
-        Login
-      </button>
-
-      <p class="login">
-        Don't have an account ?
-        <a  href="signup.html">Register</a>
-      </p>
-    </form>
-    <!-- finish form login  -->
+    </section>
+    <!-- start Reset Password -->
 
     <!-- start footer section -->
     <footer>
@@ -388,5 +362,15 @@
       </div>
     </footer>
     <!-- end footer section -->
+
+    <script src="js/main.js"></script>
+    <script src="js/counterup.min.js"></script>
+    <script src="js/waypoints.min.js"></script>
+    <script>
+      $(".counter").counterUp({
+        delay: 20,
+        time: 2000,
+      });
+    </script>
   </body>
 </html>
