--- a/service.html
+++ b/service.html
@@ -69,10 +69,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link   " aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -98,7 +98,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
+                        <a class="nav-link" href="contact-us.html">Contact us</a>
                     </li>
                 </ul>
                 <div class="auth">
@@ -127,7 +127,7 @@
     <section class="breadcrumb">
         <div class="container">
             <div class="content">
-                <a href="#"><i class="fa-solid fa-chevron-left"></i></a>
+                <a href="index.html"><i class="fa-solid fa-chevron-left"></i></a>
                 <span>Services</span>
             </div>
         </div>
